tests/miniJava/neg/004348_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public false int [] java ( ) { return 0 ; } }
